Changed /users/:username to allow changes of user data
